cloud/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ilews-production
  labels:
    app.kubernetes.io/part-of: ilews
